apps/esphome/esphome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: home-assistant
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: esphome
      port:
        number: 6052
  tls:
  - hosts:
    - esphome
